@@ -1,3 +1,7 @@
+2005-03-21  Bart Veer  <bartv@ecoscentric.com>
+
+	* src/pcmb_misc.c, cdl/hal_i386_pcmb.cdl: add profiling support
+
 2005-01-22  Ian Campbell  <icampbell@arcom.com>
 
 	* include/pcmb_serial.h, 
