@@ -1,3 +1,8 @@
+2005-03-21  Bart Veer  <bartv@ecoscentric.com>
+
+	* src/vectors.S, src/hal_misc.c, cdl/hal_i386.cdl: add profiling
+	support.
+
 2004-04-22  Jani Monoses <jani@iv.ro>
 
 	 * cdl/hal_i386.cdl :
